--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,15 +30,24 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  firebase_auth: ^4.2.5
-  firebase_core: ^2.4.1
-  cloud_firestore: ^4.3.1
-  firebase_storage: ^11.0.10
+  firebase_auth: ^4.4.2
+  firebase_core: ^2.10.0
+  cloud_firestore: ^4.5.2
+  firebase_storage: ^11.1.1
+  google_sign_in: ^6.1.0
   flutter_spinkit: ^5.1.0
+  syncfusion_flutter_pdfviewer: ^21.2.4
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  provider: ^6.0.5
+  flutter_cached_pdfview: ^0.4.1
+  share_plus: ^7.0.0
+  firebase_messaging: ^14.6.2
+  flutter_local_notifications: ^14.1.0
+#  awesome_notifications_fcm: ^0.7.4+1
+#  awesome_notifications: ^0.7.5-dev.2+1
 
 dev_dependencies:
   flutter_test:
