--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,10 +42,12 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   provider: ^6.0.5
-  flutter_cached_pdfview: ^0.4.1
+#  flutter_cached_pdfview: ^0.4.1
   share_plus: ^7.0.0
-  firebase_messaging: ^14.6.2
-  flutter_local_notifications: ^14.1.0
+  url_launcher: ^6.1.12
+  font_awesome_flutter: ^10.5.0
+#  firebase_messaging: ^14.6.2
+#  flutter_local_notifications: ^14.1.0
 #  awesome_notifications_fcm: ^0.7.4+1
 #  awesome_notifications: ^0.7.5-dev.2+1
 
