--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   share_plus: ^7.0.0
   url_launcher: ^6.1.12
   font_awesome_flutter: ^10.5.0
+  file_picker: ^5.3.1
 #  firebase_messaging: ^14.6.2
 #  flutter_local_notifications: ^14.1.0
 #  awesome_notifications_fcm: ^0.7.4+1
