--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,7 @@ dependencies:
   firebase_storage: ^11.1.1
   google_sign_in: ^6.1.0
   flutter_spinkit: ^5.1.0
-  syncfusion_flutter_pdfviewer: ^21.2.4
+  syncfusion_flutter_pdfviewer: ^24.2.4
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -46,7 +46,7 @@ dependencies:
   share_plus: ^7.0.0
   url_launcher: ^6.1.12
   font_awesome_flutter: ^10.5.0
-  file_picker: ^5.3.1
+  file_picker: ^6.1.1
 #  firebase_messaging: ^14.6.2
 #  flutter_local_notifications: ^14.1.0
 #  awesome_notifications_fcm: ^0.7.4+1
@@ -61,7 +61,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^2.0.0
+  flutter_lints: ^3.0.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -90,9 +90,11 @@ flutter:
   # list giving the asset and other descriptors for the font. For
   # example:
   fonts:
-    - family: Roboto
+    - family: AjmeraClasses1
       fonts:
-        - asset: fonts/Roboto-Regular.ttf
+        - asset: fonts/LibreFranklin-Regular.ttf
+        - asset: fonts/LibreFranklin-Medium.ttf
+          weight: 500
 
   #
   # For details regarding fonts from package dependencies,
